--- a/MyFitnessApp/src/app/workouts/workouts.component.html
+++ b/MyFitnessApp/src/app/workouts/workouts.component.html
@@ -1,7 +1,7 @@
 <ion-content>
   <ion-list>
     <ion-item *ngFor="let workout of workouts">
-      {{ workout }}
+      {{ workout.name }}
     </ion-item>
   </ion-list>
 </ion-content>
