adding new page 'tracking'

--- a/MyFitnessApp/src/app/workouts/workouts.component.html
+++ b/MyFitnessApp/src/app/workouts/workouts.component.html
@@ -1,6 +1,6 @@
 <ion-content>
   <ion-list>
-    <ion-item *ngFor="let workout of workouts">
+    <ion-item *ngFor="let workout of filteredWorkouts">
       {{ workout.name }}
     </ion-item>
   </ion-list>
