--- a/MyFitnessApp/src/app/tracking/tracking.page.html
+++ b/MyFitnessApp/src/app/tracking/tracking.page.html
@@ -1,9 +1,19 @@
-<ion-header>
+<ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>tracking</ion-title>
+    <ion-title>
+      Training beenden
+    </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content [fullscreen]="true">
+  <ion-header collapse="condense">
+    <ion-toolbar>
+      <ion-title size="large">Tab 1</ion-title>
+    </ion-toolbar>
+  </ion-header>
 
+  <div id="container">
+    <button (click)="onSave()">Training beenden</button>
+  </div>
 </ion-content>
