some styling and bugfixes on localhost/workouts

--- a/MyFitnessApp/src/app/home/home.page.html
+++ b/MyFitnessApp/src/app/home/home.page.html
@@ -1,7 +1,10 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
+    <div id="logoContainer">
+      <img src="../../assets/logo.png" alt="Logo">
+    </div>
     <ion-title>
-      MyFitness APP
+      No pain, no gain!
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -15,5 +18,6 @@
 
   <div id="container">
     <ion-button [routerLink]="['/uebungen']">Übungen</ion-button>
+    <ion-button [routerLink]="['/tracking']">Workout starten</ion-button>
   </div>
 </ion-content>
