--- a/MyFitnessApp/src/theme/variables.scss
+++ b/MyFitnessApp/src/theme/variables.scss
@@ -83,7 +83,7 @@
    */
 
   body {
-    --ion-color-primary: #428cff;
+    --ion-color-primary: #b4cdcd;
     --ion-color-primary-rgb: 66,140,255;
     --ion-color-primary-contrast: #ffffff;
     --ion-color-primary-contrast-rgb: 255,255,255;
@@ -197,7 +197,7 @@
    */
 
   .md body {
-    --ion-background-color: #121212;
+    --ion-background-color: #3f888f;
     --ion-background-color-rgb: 18,18,18;
 
     --ion-text-color: #ffffff;
