refactor naming convention from uebungen to training

--- a/PumpUpPro/frontend/src/app/home/home.page.html
+++ b/PumpUpPro/frontend/src/app/home/home.page.html
@@ -17,7 +17,7 @@
   </ion-header>
 
   <div id="container">
-    <ion-button [routerLink]="['/uebungen']">Übungen</ion-button>
+    <ion-button [routerLink]="['/training']">Übungen</ion-button>
     <ion-button [routerLink]="['/tracking']">Workout starten</ion-button>
   </div>
 </ion-content>
