--- a/PumpUpPro/frontend/src/app/training/training.page.html
+++ b/PumpUpPro/frontend/src/app/training/training.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>uebungen</ion-title>
+    <ion-title>Übungen</ion-title>
   </ion-toolbar>
 </ion-header>
 
