--- a/PumpUpPro/frontend/src/app/workouts/workouts.component.html
+++ b/PumpUpPro/frontend/src/app/workouts/workouts.component.html
@@ -1,7 +1,49 @@
 <ion-content>
-  <ion-list>
-    <ion-item *ngFor="let workout of filteredWorkouts">
-      {{ workout.name }}
-    </ion-item>
-  </ion-list>
+  <ion-item>
+    <ion-label>Muscle Group</ion-label>
+    <ion-select [(ngModel)]="selectedMuscleGroup" (ionChange)="getWorkouts()">
+      <ion-select-option *ngFor="let muscleGroup of muscleGroups" [value]="muscleGroup">
+        {{ muscleGroup }}
+      </ion-select-option>
+    </ion-select>
+  </ion-item>
+  <ng-container *ngIf="workouts">
+    <ion-accordion-group expand="inset">
+      <ion-accordion *ngFor="let workout of workouts[0]" toogleIcon="arrow-down" toogleIconSlot="start">
+        <ion-item slot="header">
+          <ion-label>{{workout.name}}</ion-label>
+        </ion-item>
+        <ion-list slot="content">
+          <ion-item class="item">
+            <ion-label>Equipment: {{workout.equipment}}</ion-label>
+          </ion-item>
+          <ion-item class="item">
+            <ion-label>Schwierigkeit: {{workout.difficulty}}</ion-label>
+          </ion-item>
+          <ion-item class="item">
+            <ion-label>Beschreibung: {{workout.instructions}}</ion-label>
+          </ion-item>
+          <div class="item">
+            <button (click)="setWorkouts()">Hinzufügen</button>
+          </div>
+        </ion-list>
+      </ion-accordion>
+    </ion-accordion-group>
+    <!-- <ion-list>
+      <ion-accordion *ngFor="let workout of workouts[0]">
+        <ion-accordion-header>
+          {{ workout.name }}
+        </ion-accordion-header>
+        <ion-card>
+          <ion-card-content>
+            {{ workout.description }}
+          </ion-card-content>
+        </ion-card>
+      </ion-accordion>
+    </ion-list>
+    <ion-list>
+      <ion-item *ngFor="let workout of workouts[0]">
+      </ion-item>
+    </ion-list>  -->
+  </ng-container>
 </ion-content>
