--- a/PumpUpPro/frontend/src/app/workouts/workouts.component.scss
+++ b/PumpUpPro/frontend/src/app/workouts/workouts.component.scss
@@ -8,8 +8,6 @@ button {
     margin-left: 20%;
   }
 
-.ion-label {
-  text-overflow: ellipsis;
-  overflow-y: scroll;
-  max-height: 100px;
-  }
+.item ion-label {
+  white-space: normal;
+}
