--- a/PumpUpPro/frontend/src/app/workouts/workouts.component.html
+++ b/PumpUpPro/frontend/src/app/workouts/workouts.component.html
@@ -24,7 +24,7 @@
               <ion-label>Beschreibung: {{workout.instructions}}</ion-label>
           </ion-item>
           <div class="item">
-            <button (click)="addWorkout(workout)">Hinzufügen</button>
+            <button (click)="addWorkout(workout.name, workout.equipment, workout.difficulty, workout.instructions)">Hinzufügen</button>
           </div>
         </ion-list>
       </ion-accordion>
