--- a/PumpUpPro/frontend/src/app/history/history.page.html
+++ b/PumpUpPro/frontend/src/app/history/history.page.html
@@ -1,9 +1,27 @@
-<ion-header>
+<ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>history</ion-title>
+    <ion-title>
+      Training
+    </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content [fullscreen]="true">
+  <ion-header collapse="condense">
+    <ion-toolbar>
+      <ion-title size="large">Tab 1</ion-title>
+    </ion-toolbar>
+  </ion-header>
+  <div id="container">
+    <ion-list>
+      <ion-item id="workout-dropdown">
+        <ion-select placeholder="Übungen">
+          <ion-select-option *ngFor="let workout of workouts" [value]="workout.name">
+            {{ workout.name }}
+          </ion-select-option>
+        </ion-select>
+      </ion-item>
+    </ion-list>
 
+  </div>
 </ion-content>
