--- a/PumpUpPro/frontend/src/app/home/home.page.html
+++ b/PumpUpPro/frontend/src/app/home/home.page.html
@@ -17,7 +17,10 @@
   </ion-header>
 
   <div id="container">
-    <ion-button [routerLink]="['/training']">Übungen</ion-button>
+    <ion-button [routerLink]="['/history']">Verlauf</ion-button>
     <ion-button [routerLink]="['/tracking']">Workout starten</ion-button>
+    <ion-button [routerLink]="['/plan']">Trainingsplan</ion-button>
+    <ion-button [routerLink]="['/training']">Übungen</ion-button>
+
   </div>
 </ion-content>
