--- a/PumpUpPro/frontend/src/app/tracking/tracking.page.html
+++ b/PumpUpPro/frontend/src/app/tracking/tracking.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Training beenden
+      Training
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -12,27 +12,29 @@
       <ion-title size="large">Tab 1</ion-title>
     </ion-toolbar>
   </ion-header>
-  <div id="container">
-  <ion-list>
-    <ion-item id="workout-dropdown">
-      <ion-select placeholder="Wähle eine Übung aus">
-        <ion-select-option *ngFor="let p of plan" [value]="p.name">
-          {{ p.name }}
-        </ion-select-option>
-      </ion-select>
-    </ion-item>
-  </ion-list>
-  <ion-item class="item">
-    <ion-label>Gewichte: {{weightValue}}</ion-label>
-    <ion-range min="2.5" max="250" step="2.5" [(ngModel)]="weightValue" pin="true">
-      <ion-icon size="small" slot="start" name="remove" (click)="decrementValue()"></ion-icon>
-      <ion-icon slot="end" name="add" (click)="incrementValue()"></ion-icon>
-    </ion-range>
-  </ion-item>
-  <ion-item class="item">
-    <ion-label position="floating">Wiederholungen: {{repsValue}}</ion-label>
-    <ion-input type="number" [(ngModel)]="repsValue"></ion-input>
-  </ion-item>
-    <button (click)="onSave()">Training beenden</button>
-  </div>
+  <ng-container *ngFor="let p of plan; let i = index">
+    <div id="container">
+      <ion-list>
+        <ion-item id="workout-dropdown">
+          <ion-select placeholder="Wähle eine Übung aus" [(ngModel)]="selectedExercise" [value]="p.name">
+            <ion-select-option [value]="plan[i].name">
+              {{ plan[i].name }}
+            </ion-select-option>
+          </ion-select>
+        </ion-item>
+      </ion-list>
+      <ion-item class="item">
+        <ion-label>{{weightValue}}kg</ion-label>
+        <ion-range min="2.5" max="250" step="2.5" [(ngModel)]="weightValue" pin="true">
+          <ion-icon size="small" slot="start" name="remove" (click)="decrementValue()"></ion-icon>
+          <ion-icon slot="end" name="add" (click)="incrementValue()"></ion-icon>
+        </ion-range>
+      </ion-item>
+      <ion-item class="item">
+        <ion-label >Wiederholungen</ion-label>
+        <ion-input type="number" [(ngModel)]="repsValue"></ion-input>
+      </ion-item>
+    </div>
+  </ng-container>
+  <button (click)="onSave(selectedExercise, weightValue, repsValue)">Training beenden</button>
 </ion-content>
