--- a/PumpUpPro/frontend/src/app/tracking/tracking.page.scss
+++ b/PumpUpPro/frontend/src/app/tracking/tracking.page.scss
@@ -1,63 +1,40 @@
-ion-header {
-    [translucent] {
-      background-color: rgba(255, 255, 255, 0.8);
-    }
-  
-    ion-toolbar {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-  
-      ion-title {
-        font-weight: bold;
-        font-size: 1.5em;
-      }
-    }
-  }
-  
-  ion-content {
-    [fullscreen] {
-      background-color: lightgray;
-    }
-  
-    ion-header {
-      ion-toolbar {
-        ion-title {
-          font-size: 1.2em;
-        }
-      }
-    }
-  
-    #container {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-between;
-        padding: 10px;
-        button {
-          margin-top: 20px;
-          width: 60%;
-          padding: 10px;
-          background-color: #3880ff;
-          color: #fff;
-          border-radius: 5px;
-        }
-        ion-item{
-            width: 50%;
-        }
-        ion-list{
-            width: 50%;
-        }
-        ion-icon {
-          cursor: pointer;
-          &:hover {
-          color: gray;
-          }
-          &:active {
-              transform: scale(0.9);
-          }
-        }
-      }
-      
-      
-  }
+ion-header[translucent="true"] {
+  background-color: transparent;
+  text-align: center;
+}
+
+
+.item {
+  padding: 10px;
+  margin: 10px;
+  text-align: center;
+}
+
+#container {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.1);
+  margin: 20px;
+}
+
+#workout-dropdown {
+  --background: #fff;
+  --color: #000;
+}
+
+ion-select {
+  font-size: 18px;
+}
+
+
+button {
+  width: 100%;
+  padding: 10px;
+  margin-top: 20px;
+  background-color: red;
+  color: #fff;
+  font-size: 20px;
+  box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.1);
+  text-align: center;
+}
