--- a/PumpUpPro/frontend/src/app/plan/plan.page.html
+++ b/PumpUpPro/frontend/src/app/plan/plan.page.html
@@ -1,9 +1,31 @@
-<ion-header>
+<ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>plan</ion-title>
+    <ion-title>
+      Trainingsplan
+    </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-
+<ion-content [fullscreen]="true">
+  <ion-header collapse="condense">
+    <ion-toolbar>
+      <ion-title size="large">Trainingsplan</ion-title>
+    </ion-toolbar>
+  </ion-header>
+  <div id="container">
+    <table>
+      <thead>
+      <tr>
+        <th>Übung</th>
+        <th>Equipment</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr *ngFor="let workout of workouts">
+        <td>{{ workout.name }}</td>
+        <td>{{ workout.equipment }}</td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
 </ion-content>
