--- a/PumpUpPro/frontend/src/app/tracking/tracking.page.scss
+++ b/PumpUpPro/frontend/src/app/tracking/tracking.page.scss
@@ -1,40 +1,56 @@
-ion-header[translucent="true"] {
-  background-color: transparent;
-  text-align: center;
-}
-
-
-.item {
-  padding: 10px;
-  margin: 10px;
-  text-align: center;
-}
-
-#container {
-  background-color: #fff;
-  padding: 20px;
-  border-radius: 10px;
-  box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.1);
-  margin: 20px;
-}
-
-#workout-dropdown {
-  --background: #fff;
-  --color: #000;
-}
-
-ion-select {
-  font-size: 18px;
-}
-
-
-button {
+table {
   width: 100%;
-  padding: 10px;
-  margin-top: 20px;
-  background-color: red;
-  color: #fff;
-  font-size: 20px;
-  box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.1);
+  border-collapse: collapse;
+  thead tr th {
+    text-align: center;
+    padding: 10px;
+  }
+  tbody tr td {
+    border: 1px solid #ccc;
+    padding: 10px;
+    text-align: center;
+  }
+  tbody tr:nth-child(even) {
+    background-color: #53868B;
+  }
+
+}
+
+@media only screen and (max-width: 600px) {
+  thead {
+    display: none;
+  }
+  tbody tr td:first-child {
+    background-color: #53868B;
+    font-weight: bold;
+    text-align: center;
+  }
+  tbody tr td {
+    display: block;
+    text-align: center;
+  }
+  tbody tr td::before {
+    content: attr(data-label);
+    float: left;
+    font-weight: bold;
+  }
+}
+
+#finish {
+  width: 100%;
+  height: 50px;
+  margin: 50px auto;
+  background-color: #009acd;
+  color: white;
+  border: none;
+  border-radius: 10px;
   text-align: center;
+  font-size: 18px;
+  cursor: pointer;
+}
+ion-input {
+  text-align: center;
+}
+ion-select, ion-range, ion-input {
+
 }
