--- a/PumpUpPro/frontend/src/app/tracking/tracking.page.html
+++ b/PumpUpPro/frontend/src/app/tracking/tracking.page.html
@@ -32,7 +32,7 @@
           </ion-select>
         </td>
         <td>
-          <ion-label>{{p.max}}</ion-label>
+          <ion-label>Max. Gewicht: {{p.max}}</ion-label>
         </td>
         <td>
           <ion-label>{{p.weightValue}}kg</ion-label>
